cabal-version: 3.0
name:          monad-station
version:       0.1.0.0
build-type:    Simple

executable monad-station
  main-is:          Main.hs
  other-modules:    Types, Parser, Game, Controller, Display
  build-depends:    base >= 4.14, containers >= 0.6, mtl >= 2.2
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unused-top-binds
